public/style.css
*,
*::before,
*::after {
  padding: 0;
  margin: 0;
}

body {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  display: grid;
  place-content: center;
  text-align: center;
  justify-items: center;
  padding-bottom: 5rem;
}

input:not(input[type="radio"]) {
  display: block;
  width: 50ch;
  margin-inline: auto;
}

input[type="text"],
input[type="tel"],
input[type="password"],
input[type="email"] {
  margin-block: 0.25rem 0.5rem;
  padding: 0.5rem;
}

nav {
  margin-block: 2rem;
}

#products-page-nav,
#add-product-nav,
#cart-nav {
  margin-top: 2rem;
}

main {
  width: 550px;
  text-align: center;
}

form {
  outline: 1px solid black;
  padding-block: 1rem 1.5rem;
}

#create-user-form {
  display: none;
}

button {
  font: inherit;
  margin-top: 1rem;
  padding-block: 0.5rem 0.75rem;
  padding-inline: 2rem;
  border-radius: 15px;
  cursor: pointer;
  border: none;
  outline: 1px solid black;
  background: none;
}

a {
  text-decoration: none;
  color: currentColor;
  margin-top: 1rem;
  padding-block: 0.5rem 0.75rem;
  padding-inline: 2rem;
  border-radius: 15px;
  cursor: pointer;
  outline: 1px solid black;
}

#edit-user-home-link {
  margin-top: 2rem;
}

.login-bug {
  position: absolute;
  top: 1.75rem;
  left: 2.75rem;
  min-height: 100px;
}

#avatar {
  width: 50px;
  border-radius: 50%;
  max-height: 50px;
  object-fit: contain;
}

.spacer {
  min-height: 55px;
}

#btn-logout {
  position: absolute;
  top: 7.5rem;
  left: 1.85rem;
}

#edit-user-form {
  display: none;
  margin-top: 3rem;
}

.products-wrapper {
  --overlay-display: none;
  display: flex;
  flex-wrap: wrap;
  width: 75vw;
  justify-content: space-around;
  row-gap: 1rem;
}

#login-message {
  --overlay-display: none;
}

#add-prod-main {
  --overlay-display: none;
}

.products-wrapper:after,
#login-message:after,
#add-prod-main:after {
  content: "GO LOG IN";
  color: purple;
  font-size: 2.5rem;
  font-weight: 700;
  position: fixed;
  inset: 0;
  background-color: rgba(128, 128, 128, 0.4);
  display: var(--overlay-display);
  place-items: center;
  pointer-events: none;
}

#add-prod-main:after {
  content: "NOT ADMIN";
}

.product-card {
  flex-basis: 300px;
  padding: 1rem;
  outline: 1px solid black;
}

img {
  width: 150px;
  max-width: 100%;
}

.cart-bug {
  position: absolute;
  top: 1rem;
  right: 1rem;
  /* outline: 2px solid lime; */
  width: 50px;
}

.cart-bug span {
  position: absolute;
  left: 0;
  background: purple;
  color: white;
  border-radius: 50%;
  font-size: 1rem;
  width: 1.5rem;
  aspect-ratio: 1;
}

.product-card .prod-qty {
  margin-top: 0.5rem;
  padding: 0.5rem;
  width: 4rem;
  text-align: center;
}

table {
  border: 1px solid black;
  border-collapse: collapse;
  table-layout: fixed;
  position: relative;
}

caption {
  margin-block: 0rem 1.5rem;
  font-size: 1.5rem;
  font-weight: 700;
}

th {
  padding: 1rem 1.5rem;
  font-weight: 600;
}

table img {
  max-width: 50px;
}

tr {
  border: 1px solid black;
  padding-inline: 1rem;
}

td {
  padding: 1rem;
}

table button {
  margin-top: 0rem;
  padding-block: 0.25rem 0.5rem;
  padding-inline: 1rem;
}

tfoot td,
tfoot th {
  padding: 0;
  border: none;
}

tfoot th {
  padding-block: 0.5rem 0.65rem;
  font-weight: 400;
}

tfoot tr:last-child th,
tfoot tr:last-child td:last-child {
  font-size: 1.5rem;
  font-weight: 700;
}

tfoot tr:last-child td {
  padding-inline: 0.5rem;
}

tfoot tr {
  border: none;
}

#modal-update-qty {
  width: 4rem;
  text-align: right;
  writing-mode: ltr;
  padding: 0.25rem;
  font-size: 1.25rem;
  margin-top: 1rem;
}

dialog {
  margin: auto;
  padding: 2rem;
}

.modal-prod-info-wrapper {
  display: grid;
  margin-top: 1rem;
  gap: 1rem;
  justify-items: center;
  width: 350px;
}

.cart-msg,
.home-message,
tfoot tr:first-child td:nth-child(2) {
  font-size: 1.5rem;
  font-weight: 600;
}

.shipping-info-wrapper {
  height: 1.75rem;
  padding-left: 3rem;
}

tfoot tr:first-child td:first-child,
tfoot tr:first-child td:nth-child(2) {
  padding-left: 3.125rem;
}

tfoot tr:last-child td,
tfoot tr:last-child th {
  padding-bottom: 2rem;
}

tfoot tr:first-child td {
  padding-top: 1rem;
}

tfoot tr:first-child th {
  padding-top: 1.5rem;
}

.order-numbers-wrapper {
  position: absolute;
  top: 15rem;
  left: 1rem;
  text-align: left;
}

.order-numbers-wrapper p:first-child {
  margin-bottom: 0.5rem;
}

.order {
  font-size: 1.25rem;
  font-weight: 600;
  cursor: pointer;
  margin-bottom: 1rem;
}

.order-details {
  margin-top: 5rem;
  font-size: 1.25rem;
  display: grid;
  gap: 0.5rem;
}

